--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -1,6 +1,6 @@
 <article class="xviews xmentees xnew">
 	<%= form_for(@mentee) do |f| %>
-		
+
 	  <%= f.label :first_name %>
 	  <%= f.text_field :first_name %><br>
 
@@ -11,7 +11,7 @@
 	  <%= f.email_field :email %><br>
 
 	  <%= f.label :last_name %>
-	  <%= f.text_field :last_name %><br>	 
+	  <%= f.text_field :last_name %><br>
 
 	  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
 	  <%= f.text_area :objective %><br>
@@ -45,8 +45,10 @@
 	  <%= f.text_field :linkedin_link %><br>
 
 	  <%= f.label :mentor_demographic_pref, 'I prefer my mentor to share a common context with me' %>
-	  <%= f.check_box :mentor_demographic_pref %><br /> 
+	  <%= f.check_box :mentor_demographic_pref %><br />
 
+		<div class="xbuttons">
 	  <%= f.submit  %>
+		</div>
 	<% end %>
 </article>
