--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -51,6 +51,9 @@
       <%= f.label :other %>
       <%= f.text_field :other %>
     </div>
+    <%= user = User.find_by(uid: @auth['uid']) %>
+    <%= user.name %>
+    <%= f.hidden_field :user, value: user %>
     <div class="xbuttons">
       <%= f.submit %>
     </div>
