--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
         </button>
-        <h1><%= link_to root_path do %>Common Context<% end %></h1>
+        <h1><%= link_to root_path do %>Common Context <%= image_tag(('logo.jpg'), width: '70', height: '70', class: 'img-circle') %><% end %></h1>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -50,7 +50,6 @@
     <div class="text-center">
       <h1>Welcome, <%= current_user.name %></h1>
       <h4>Logged In with -> <strong><em><%= @auth['provider'].capitalize %></em></strong></h4>
-      <%= image_tag('logo.jpg') %>
     </div>
   <% end %>
     <%= yield %>
