working on sign out

--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -48,7 +48,7 @@
 	  <%= f.check_box :mentor_demographic_pref %><br />
 	  <%= user = User.find_by(uid: @auth['uid']) %>
 	  <%= user.name %>
-    <%= f.hidden_field :user, value: user %>
+    <%= f.hidden_field :user_id, value: user.id %>
 		<div class="xbuttons">
 	  <%= f.submit  %>
 		</div>
