--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -53,9 +53,10 @@
     </div>
     <%= user = User.find_by(uid: @auth['uid']) %>
     <%= user.name %>
-    <%= f.hidden_field :user, value: user %>
+    <%= f.hidden_field :user_id, value: user.id %>
     <div class="xbuttons">
       <%= f.submit %>
     </div>
   <% end %>
 </article>
+
