login and signup images and functionality set

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -3,4 +3,34 @@ index.html.erb
 <% if current_user!= nil %>
     <%= render 'show' %>
 <% end %>
+
+
 <h4>About page</h4>
+<div>
+<h4>Common ContextNorms</h4>
+Schedulingstart <br>
+time standup at 9:30am<br>
+meditation immediately after morning standupmake time for yourself over the weekend but work hard to justify itEOD standupBreaksgrab coffeeshort team breaks are good for productivity
+
+<h4>Communication</h4>
+slack as primary form of communicationcells as fallback 
+if we can't get in touch<br>
+Jack 415-847-5667<br>
+Dharini 415-412-2596<br>
+Matt 415-517-8515<br>
+Becca 816-878-8481<br>
+Clear delegation of tasks before remotely doing thingsRoles and Goalsstrengths and weaknesses<br>
+
+
+<h4>learning goals</h4>
+JS Framework? Angular?Matt: Rails as strength - weakness: frontend<br>
+Dharini: would like to do more backend<br>
+Jack: Would like to get into more frontend stuff, materialize<br>
+Becca: strong with backend, willing to be floaterAccountability
+to work on your sliceto be availableto be sure you're not stepping on toes codesTeam <br>TasksWireframe all viewsinVision + Mockup SoftwareGit Master- Becca off hours, pairing Git master flow
+</div>
+
+
+
+<%= link_to "auth/linkedin" do%><%= image_tag('signup-linkedin.png') %>
+<% end %>
