--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -1,5 +1,7 @@
 <article class="xviews xmentees xshow">
 	<h2>My Profile</h2>
+	<%= link_to 'Edit', edit_mentee_path(@mentee) %>
+
 
 	<%= render 'public' %>
 
