--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,19 +1,33 @@
-<article class="xviews xmentors xshow">
-	<h2>My Profile</h2>
+      	
+   		<article class="xviews xmentors xshow container row">  
+				<h2>My Profile</h2>
+			<section class="col s5">  
+      			<%= render 'mentor_profile' %>
+     		</section>
+   			<section class="col s7 center">
+				<% if @mentor.appointments.any? %>
+					<h3>Upcoming Appointments</h3>
+					<% @mentor.appointments.each do |appointment| %>
+						<ul>
+							<li>
+								<%= link_to "#{appointment.datetime}",mentor_appointment_path(appointment) %>
+							</li>	
+						</ul>
+						
+					<% end %>
+			<!-- put else inside cone when uncommenting <%  %> -->
+					<h3>View pending matches</h3>
+					<!-- maybe something here to show pending matches that need scheduling confirmation -->
+				<% end %>
+			</section>
+		</article>
+   
+      
 
-	<% if @mentor.appointments.any? %>
-		<h3>Upcoming Appointments</h3>
-		<% @mentor.appointments.each do |appointment| %>
-			<ul>
-				<li>
-					<%= link_to "#{appointment.datetime}",mentor_appointment_path(appointment) %>
-				</li>	
-			</ul>
-			
-		<% end %>
-<!-- put else inside cone when uncommenting <%  %> -->
-		<h3>View pending matches</h3>
-		<!-- maybe something here to show pending matches that need scheduling confirmation -->
-	<% end %>
-</article>
+
+
+
+
+<!-- include private info, ie upcoming appts and pending matches -->
+<!-- render partial with public info - photo, industry, title, etc -->
 
