--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
             <li>Signed in as: <%=current_user.name %> - <%= image_tag(@auth['info']['image'], width: '50', height: '50', class: 'img-circle') %></li>
-            <li><%= link_to "Sign Out", 'sign_out', method: :delete %></li>
+            <li><%= link_to "Sign Out", '/auth/signout', method: :delete %></li>
             <% else %>
             <li><%= link_to "auth/linkedin" do%><%= image_tag('login.png', width: '70', height: '70') %><% end %></li>
           <% end %>
