--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
         </button>
-        <h1><%= link_to root_path do %>Common Context <%= image_tag(('logo.jpg'), width: '70', height: '70', class: 'img-circle') %><% end %></h1>
+        <h1><%= link_to root_path do %>Common Context <%= image_tag(('logo.png'), width: '70', height: '70') %><% end %></h1>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
