--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -2,13 +2,13 @@
 	<%= form_for(@mentee) do |f| %>
 
 	  <%= f.label :first_name %>
-	  <%= f.text_field :first_name %><br>
+	  <%= f.text_field :first_name,:value => @auth['info']['first_name'] %><br>
 
 	  <%= f.label :last_name %>
-	  <%= f.text_field :last_name %><br>
+	  <%= f.text_field :last_name, :value => @auth['info']['last_name'] %><br>
 
 	  <%= f.label :email %>
-	  <%= f.email_field :email %><br>
+	  <%= f.email_field :email, :value => @auth['info']['dharinimadan@gmail.com'] %><br>
 
 	  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
 	  <%= f.text_area :objective %><br>
@@ -39,7 +39,7 @@
 	  <%= f.text_field :interests %><br>
 
 	  <%= f.label :linkedin_link %>
-	  <%= f.text_field :linkedin_link %><br>
+	  <%= f.text_field :linkedin_link, :value => @auth['info']['urls']['public_profile'] %><br>
 
 	  <%= f.label :mentor_demographic_pref, 'I prefer my mentor to share a common context with me' %>
 	  <%= f.check_box :mentor_demographic_pref %><br />
