--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -1,48 +1,121 @@
-<article class="xviews xmentees xnew">
+
+<article class="xviews xmentees xnew card-panel hoverable">
 	<%= form_for(@mentee) do |f| %>
+	
+	<div class="row">
+		<div class="input-field col s3">
+		  <%= f.label :first_name %>
+		  <%= f.text_field :first_name %><br>
+	  	</div>
+	  	<div class="input-field col s3">
+		  <%= f.label :last_name %>
+		  <%= f.text_field :last_name %><br>
+	  	</div>
+	</div>
 
-	  <%= f.label :first_name %>
-	  <%= f.text_field :first_name %><br>
+	<div class="row">
+		<div class="col s6">
+			<div class="input-field">
+			  <%= f.label :email %>
+			  <%= f.email_field :email %><br>
+			</div>
+	  	</div>
+	</div>
 
-	  <%= f.label :last_name %>
-	  <%= f.text_field :last_name %><br>
+	<div class="row">
+		<div class="col s6">
+			<div class="input-field">
+			  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
+			  <%= f.text_area :objective %><br>
+			</div>
+	  	</div>
+	</div>
 
-	  <%= f.label :email %>
-	  <%= f.email_field :email %><br>
+ 	<div class="row">
+		<div class="col s6">
+			<div class="input-field">
+			  <%= f.label :race %>
+			  <%= f.text_field :race %><br>
+			</div>
+	  	</div>
+	</div>
 
-	  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
-	  <%= f.text_area :objective %><br>
+	<div class="diversity">
 
-	  <div class="diversity">
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :gender %>
+				  <%= f.text_field :gender %><br>
+				</div>
+		  	</div>
+		</div>
+		  
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :socioeconomic_background %>
+				  <%= f.text_field :socioeconomic_background %><br>
+				</div>
+		  	</div>
+		</div>
+		  
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :orientation %>
+				  <%= f.text_field :orientation %><br>
+				</div>
+		  	</div>
+		</div>
+		  
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :other %>
+				  <%= f.text_field :other %><br>
+				</div>
+		  	</div>
+		</div>
 
-	  <%= f.label :race %>
-	  <%= f.text_field :race %><br>
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :location %>
+				  <%= f.text_field :location %><br>
+				</div>
+		  	</div>
+		</div>
+		  
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				 <%= f.label :interests %>
+				 <%= f.text_area :interests %><br>
+				</div>
+		  	</div>
+		</div>
 
-	  <%= f.label :gender %>
-	  <%= f.text_field :gender %><br>
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				 <%= f.label :linkedin_link %>
+				 <%= f.text_field :linkedin_link %><br>
+				</div>
+		  	</div>
+		</div>
 
-	  <%= f.label :socioeconomic_background %>
-	  <%= f.text_field :socioeconomic_background %><br>
 
-	  <%= f.label :orientation %>
-	  <%= f.text_field :orientation %><br>
+		<div class="row">
+			<div class="col s6">
+				<input type="checkbox">
+		  		<%= f.check_box :mentor_demographic_pref %>
+				<%= f.label :mentor_demographic_pref, 'I prefer my mentor to share a common context with me' %>
+			</div>
+		</div>
 
-	  <%= f.label :other %>
-	  <%= f.text_field :other %><br>
+	 </div>
 
-	  </div>
-
-	  <%= f.label :location %>
-	  <%= f.text_field :location %><br>
-
-	  <%= f.label :interests %>
-	  <%= f.text_field :interests %><br>
-
-	  <%= f.label :linkedin_link %>
-	  <%= f.text_field :linkedin_link %><br>
-
-	  <%= f.label :mentor_demographic_pref, 'I prefer my mentor to share a common context with me' %>
-	  <%= f.check_box :mentor_demographic_pref %><br />
 	  <%= user = User.find_by(uid: @auth['uid']) %>
 	  <%= user.name %>
     <%= f.hidden_field :user_id, value: user.id %>
