--- a/app/views/mentees/_form.html.erb
+++ b/app/views/mentees/_form.html.erb
@@ -1,44 +1,44 @@
 
 <article class="xviews xmentees xnew card-panel hoverable">
 	<%= form_for(@mentee) do |f| %>
-	
-	<div class="row">
-		<div class="input-field col s3">
-		  <%= f.label :first_name %>
-		  <%= f.text_field :first_name %><br>
-	  	</div>
-	  	<div class="input-field col s3">
-		  <%= f.label :last_name %>
-		  <%= f.text_field :last_name %><br>
-	  	</div>
-	</div>
+	<div class="field">
+		<div class="row">
+			<div class="input-field col s3">
+			  <%= f.label :first_name %>
+			  <%= f.text_field :first_name %><br>
+		  	</div>
+		  	<div class="input-field col s3">
+			  <%= f.label :last_name %>
+			  <%= f.text_field :last_name %><br>
+		  	</div>
+		</div>
 
-	<div class="row">
-		<div class="col s6">
-			<div class="input-field">
-			  <%= f.label :email %>
-			  <%= f.email_field :email %><br>
-			</div>
-	  	</div>
-	</div>
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :email %>
+				  <%= f.email_field :email %><br>
+				</div>
+		  	</div>
+		</div>
 
-	<div class="row">
-		<div class="col s6">
-			<div class="input-field">
-			  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
-			  <%= f.text_area :objective %><br>
-			</div>
-	  	</div>
-	</div>
+		<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :objective, "What is your main goal when meeting with your mentor?" %>
+				  <%= f.text_area :objective %><br>
+				</div>
+		  	</div>
+		</div>
 
- 	<div class="row">
-		<div class="col s6">
-			<div class="input-field">
-			  <%= f.label :race %>
-			  <%= f.text_field :race %><br>
-			</div>
-	  	</div>
-	</div>
+	 	<div class="row">
+			<div class="col s6">
+				<div class="input-field">
+				  <%= f.label :race %>
+				  <%= f.text_field :race %><br>
+				</div>
+		  	</div>
+		</div>
 
 	<div class="diversity">
 
@@ -105,7 +105,6 @@
 		  	</div>
 		</div>
 
-
 		<div class="row">
 			<div class="col s6">
 				<input type="checkbox">
@@ -118,9 +117,11 @@
 
 	  <%= user = User.find_by(uid: @auth['uid']) %>
 	  <%= user.name %>
-    <%= f.hidden_field :user_id, value: user.id %>
+    	<%= f.hidden_field :user_id, value: user.id %>
+	
 		<div class="xbuttons">
-	  <%= f.submit  %>
+	  		<%= f.submit  %>
 		</div>
+
 	<% end %>
 </article>
