--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -6,11 +6,11 @@
 
       <div class="row">
         <div class="input-field col s3">
-          <%= f.label :first_name %>
+          <%= f.label :first_name, class: "active"%>
           <%= f.text_field :first_name %><br>
         </div>
         <div class="input-field col s3">
-          <%= f.label :last_name %>
+          <%= f.label :last_name, class: "active" %>
           <%= f.text_field :last_name %><br>
         </div>
       </div>
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :email %>
+            <%= f.label :email, class: "active" %>
             <%= f.email_field :email %><br>
           </div>
         </div>
@@ -37,7 +37,7 @@
        <div class="row">
         <div class="col s6">
           <div class="input-field">
-             <%= f.label :current_company %>
+             <%= f.label :current_company, class: "active" %>
              <%= f.text_field :current_company %>
           </div>
         </div>
@@ -46,7 +46,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :current_industry %>
+            <%= f.label :current_industry, class: "active" %>
             <%= f.text_field :current_industry %>
           </div>
         </div>
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :linkedin_link %>
+            <%= f.label :linkedin_link, class: "active" %>
             <%= f.text_field :linkedin_link %>
           </div>
         </div>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :race %>
+            <%= f.label :race, class: "active" %>
             <%= f.text_field :race %>
           </div>
         </div>
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :gender %>
+            <%= f.label :gender, class: "active" %>
             <%= f.text_field :gender %>
           </div>
         </div>
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :socioeconomic_background %>
+            <%= f.label :socioeconomic_background, class: "active" %>
             <%= f.text_field :socioeconomic_background %>
           </div>
         </div>
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :orientation %>
+            <%= f.label :orientation, class: "active" %>
             <%= f.text_field :orientation %>
           </div>
         </div>
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :location %>
+            <%= f.label :location, class: "active" %>
             <%= f.text_field :location %>
           </div>
         </div>
@@ -120,7 +120,7 @@
       <div class="row">
         <div class="col s6">
           <div class="input-field">
-            <%= f.label :interests %>
+            <%= f.label :interests, class: "active" %>
             <%= f.text_field :interests %>
           </div>
         </div>
