Adds styling to mentor matches page

--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -49,5 +49,9 @@ color: #364E93;
      box-shadow: 0 1px 0 0 #FFE349 !important;
    }
 
+   .mentor-match {
+      display: inline-block !important;
+   }
+
    
 
