--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,4 +1,5 @@
 <article class="xarticles xappointments xnew">
-	<h1>Schedule an Appointment</h1>
-			
+	<h4>Schedule an Appointment</h4>
+	<%= render 'form' %>
+
 </article>
