Renders basic appointment form.

--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -6,7 +6,7 @@
      		</section>
    			<section class="col s7 center">
 
-        <%= link_to "Create an appointment", new_mentor_appointment_path(@mentor)%>
+        <%= link_to "Create an appointment", new_mentor_appointment_path(@mentor) %> <%#  %>
 				<% if @mentor.appointments.any? %>
 					<h3>Upcoming Appointments</h3>
 					<% @mentor.appointments.each do |appointment| %>
