--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,6 +1,14 @@
 <article class="xviews xmentor xnew card-panel hoverable">
   <%= form_for([@mentor, @appointment]) do |f| %>
 
+  <div class="row">
+    <div class="col s6">
+      <div class="input-field">
+         <%= f.label :datetime %>
+         <%= f.number_field :datetime %>
+      </div>
+    </div>
+  </div>
   <div class="xbuttons">
     <%= f.submit %>
   </div>
