--- a/app/views/mentors/_mentor_profile.html.erb
+++ b/app/views/mentors/_mentor_profile.html.erb
@@ -1,4 +1,4 @@
-<section class="card">
+<section class="card hoverable">
 	<h3><%= image_tag(@auth['info']['image'], width: '70', height: '70', class: 'img-circle') %></li></h3>
 	<h3><%=@mentor.first_name + " " + @mentor.last_name%></h3>
 	<h4><%=@mentor.current_industry%></h4>
