--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -3,12 +3,20 @@
 
   <div class="row">
     <div class="col s6">
+      <%= f.label :datetime  %>
+      <%= f.datetime_local_field :datetime %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s6">
       <div class="input-field">
-         <%= f.label :datetime %>
-         <%= f.number_field :datetime %>
+        <%= f.label :location %>
+        <%= f.text_field :location %>
       </div>
     </div>
   </div>
+
   <div class="xbuttons">
     <%= f.submit %>
   </div>
