--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -136,12 +136,12 @@
 
     </div>
       
-    <%= user = User.find_by(uid: @auth['uid']) %>
-    <%= user.name %>
-    <%= f.hidden_field :user_id, value: user.id %>
+    <% user = User.find_by(uid: @auth['uid']) %>
+    <% user.name %>
+    <% f.hidden_field :user_id, value: user.id %>
 
       <div class="xbuttons">
-        <%= f.submit %>
+        <%= f.submit "Save", class: "btn" %>
       </div>
 
   <% end %>
