developes setting availability

--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -1,6 +1,15 @@
 <article class="xviews xmentor xnew card-panel hoverable">
   <%= form_for(@mentor) do |f| %>
 
+    <div class="row">
+      <div class="col s6">
+        <div class="input-field">
+          <%= f.label :availability %> <br>
+          <%= f.datetime_field :availability %>
+        </div>
+      </div>
+    </div>
+
     <div class="field">
       <div class="row">
         <div class="input-field col s3">
@@ -124,23 +133,13 @@
         </div>
       </div>
 
-      <!-- <div class="row"> // Moving this to the mentor show page
-        <div class="col s6">
-          <div class="input-field">
-            <%= f.label :availability %> <br>
-            <%= f.datetime_field :availability %>
-          </div>
-        </div>
-      </div> -->
-
-
     </div>
 
     <% user = User.find_by(uid: @auth['uid']) %>
     <% user.name %>
     <% f.hidden_field :user_id, value: user.id %>
 
-      <div class="xbuttons">
+      <div class="btn">
         <%= f.submit %>
       </div>
 
