--- a/app/views/mentors/_mentor_profile.html.erb
+++ b/app/views/mentors/_mentor_profile.html.erb
@@ -12,7 +12,7 @@
 			<li>Gender: <%=@mentor.gender %></li>
 			<li>Orientation: <%= @mentor.orientation %></li>
 			<li>Socio-economic background: <%=@mentor.socioeconomic_background%></li>
+			<li>Availability: <%=@mentor.availability %></li>
 		</ul>
 		<%= link_to "Edit", edit_mentor_path(@mentor), class: "btn" %>
 </section>
-
