--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -5,13 +5,13 @@
  		</section>
 			<section class="col s7 center">
 
-    <%= link_to "Create an appointment", new_mentor_appointment_path(@mentor) %> <%#  %>
+    <%= link_to "Set your availability", edit_mentor_path(@mentor) %> <%#  %>
 		<% if @mentor.appointments.any? %>
 			<h3>Upcoming Appointments</h3>
 			<% @mentor.appointments.each do |appointment| %>
 				<ul>
 					<li>
-						<%= link_to "#{appointment.datetime}",mentor_appointment_path(appointment) %>
+						<%= link_to "#{appointment.datetime}", mentor_appointment_path(@mentor) %>
 					</li>
 				</ul>
 
