Adds logic to detect mentor or mentee and set in session.

--- a/app/views/mentors/new.html.erb
+++ b/app/views/mentors/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Enter your details</h1>
-
+<% set_user_type("mentor") %>
 <%= render 'form', mentor: @mentor %>
 
 <%= link_to 'Back', mentors_path %>
