--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -54,10 +54,14 @@ color: #364E93;
    }
 
 .home-header {
-  padding-top: 150px;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
    
 .card {
   padding: 25px;
+}
+
+.home-wrapper {
+  padding: 70px;
 }
