--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -1,5 +1,6 @@
-      	
+		      	
    		<article class="xviews xmentors xshow container row">  
+   		<% if current_user && user_type == "mentor" %>
 				<h2>My Profile</h2>
 			<section class="col s5">  
       			<%= render 'mentor_profile' %>
@@ -20,6 +21,9 @@
 					<!-- maybe something here to show pending matches that need scheduling confirmation -->
 				<% end %>
 			</section>
+			<% else %>
+			<p> This profile is private </p>
+			<% end %>
 		</article>
    
       
