--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,9 +1,4 @@
 <article class="xarticles xappointments xnew">
-	<h1>Schedule an Appointment</h1>
-	<%= form_for ([@mentor, @appointment]) do |a| %>
-    <%= a.datetime :datetime %><br>
-    <%= a.string :location %><br> 
-    <%= a.submit "Make Appointment"%>
-  <%end%>
+  <h4>Schedule an Appointment</h4>
+  <%= render 'form' %>
 </article>
-
