Functional calendar from database

--- a/app/views/_nav.html.erb
+++ b/app/views/_nav.html.erb
@@ -2,11 +2,13 @@
     <ul id="nav-home" class="left">
       <li><%= link_to "Common Context", root_path %>
       </li>
+      <li><%= link_to "Calendar", calendars_path %>
+      </li>      
     </ul>
     <ul id="nav-mobile" class="right">
       <% if current_user %>
         <li id="nav-name"><%= link_to current_user.name, mentee_path(current_user) %></li>
-        <li id="nav-photo"><%= image_tag(@auth['info']['image'], class: 'img-responsive circle') %>
+        <li id="nav-photo"><%= image_tag(@auth['info']['image'], width: "79%", class: 'img-responsive circle') %>
         </li>
         <li id= "nav-signout"><%= link_to "Sign Out", '/auth/signout', method: :delete %></li>
         <% else %>
