--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
 
 
 
-  <%= favicon_link_tag 'favicon.ico' %>
-
+    <%= favicon_link_tag 'favicon.ico' %>
+    <%= yield :head %>
+  </head>
   <body>
 
 
@@ -21,16 +22,11 @@
 
 
 
+
   <% flash.each do |key, value| %>
     <div class="alert alert-info"><%= value %></div>
   <% end %>
 
-  <% if current_user %>
-    <div class="text-center">
-      <h1>Welcome, <%= current_user.name %></h1>
-    </div>
-  <% end %>
-  
   <%= yield %>
   </body>
 </html>
