--- a/app/views/_nav.html.erb
+++ b/app/views/_nav.html.erb
@@ -5,12 +5,12 @@
     </ul>
     <ul id="nav-mobile" class="right">
       <% if current_user %>
-        <% if user_type == "mentor" %>
+        <% if user_type == "mentor" && get_user %>
           <li id="nav-profile"><%= link_to "#{current_user.name}", mentor_path(get_user) %>
-        <% elsif user_type == "mentee" %>
+        <% elsif user_type == "mentee"  && get_user%>
           <li id="nav-profile"><%= link_to "#{current_user.name}", mentee_path(get_user) %>
         <% else %>
-          <li id="nav-profile"><%= link_to "#{current_user.name}", get_user %>
+          <li id="nav-profile"><%= link_to "#{current_user.name}", finish_registration_path %>
         <% end %>       
         <li id="nav-photo"><%= image_tag(@auth['info']['image'], class: 'img-responsive circle') %>
         </li>
