Fixes minor edge cases in appts controller for mentor created appts.

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -1,4 +1,4 @@
-<article class="xviews xmentor xnew card-panel hoverable">
+<article class="xviews xmentor xappointment xnew card-panel hoverable">
   <%= form_for([@mentor, @appointment]) do |f| %>
 
   <div class="row">
