--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,13 +1,25 @@
 <!-- rather than rendering and embedding the user profile page we should route
 there and keep the home page just as a home page with the signin buttons hidden
 for logged in users -->
-<div class="container">
+
+<!-- /*<div class = "iris">
+   <div class = "card transparent z-depth-5">
+   </div>
+</div> -->
+ 
+
+<div class="home-container">
+ <% if current_user %>
+    <div class="text-center">
+      <h5 class="welcome">Welcome, <%= current_user.name %></h5>
+    </div>
+  <% end %>
   <div class="row valign-wrapper home-wrapper">
     <div class="col s6 offset-s3 valign">
     	<h2 class="valign center home-header">Common Context</h2>
-      <div class="card blue-grey darken-1 hoverable">
-        <div class="card-content white-text">
-          <span class="card-title center">Empowering aspiring developers to connect with mentors working in the field</span>
+      <div class="card transparent z-depth-5 portica hoverable">
+        <div class="card-content opacity chambray-text">
+          <span class="card-title center text-darken-2 welcome"><strong>Empowering aspiring developers to connect with mentors working in the field<strong></span>
         </div>
         <div class="card-action center">
           <%= link_to "auth/linkedin" do%><%= image_tag('signup-linkedin.png') %>
