--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,9 +1,8 @@
-<article class="xviews xmatches xshow">
+<article class="xviews xmatches xshow deets-card">
 	<h2>My Match</h2>
 		<!-- TODO put some details about the match here -->
-		<p>
-			<%= @match.mentor.first_name %>
-		</p>
+		<%= render partial: "/mentees/mentor_deets_card", locals: { a_match: @match.mentor } %>
+
 		<h3>Schedule an Appointnment</h3>
 
 		<% if @appointments %>
