Adds check for instances where mentor and mentee id could be the same. Checks each view.

--- a/app/views/mentors/edit.html.erb
+++ b/app/views/mentors/edit.html.erb
@@ -1,7 +1,9 @@
 
 <article class="xviews xmentors xshow">
+	<% if current_user && user_type == "mentor" && get_user.id == @mentor.id %>
 	<h2>Edit Profile</h2>
 
 	<%= render 'form'%>
-
+	<% else %>
+	<p> This page is private. </p>
 </article>
