--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,4 +1,5 @@
 <article class="xviews xmatches xshow">
+	<% if current_user && user_type == "mentee" && get_user.id == @mentee.id %>
 	<h2>My Match</h2>
 		<!-- TODO put some details about the match here -->
 		<p>
@@ -16,5 +17,8 @@
 			<% end %>
 		<% end %>
 		<!-- TODO nice to have: make appt request if none served -->
+	<% else %>
+		<p>These matches are not yours.</p>
+	<% end %> 
 </article>
 
