--- a/app/views/mentees/new.html.erb
+++ b/app/views/mentees/new.html.erb
@@ -1,3 +1,7 @@
-<h2>Mentee Registration</h2>
-<% set_user_type("mentee") %>
-<%= render 'form', mentee: @mentee%>
+<% if current_user %>
+	<h2>Mentee Registration</h2>
+	<% set_user_type("mentee") %>
+	<%= render 'form', mentee: @mentee%>
+<% else %>
+	<p>You must sign in with LinkedIn to start a profile.</p>
+<% end %>
