--- a/app/views/mentors/edit.html.erb
+++ b/app/views/mentors/edit.html.erb
@@ -1,4 +1,3 @@
-
 <article class="xviews xmentors xshow">
 	<% if current_user && user_type == "mentor" && get_user.id == @mentor.id %>
 	<h2>Edit Profile</h2>
@@ -6,4 +5,5 @@
 	<%= render 'form'%>
 	<% else %>
 	<p> This page is private. </p>
+	<% end %>
 </article>
