Adds background image of blurred coffee shop

--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -69,3 +69,13 @@ color: #364E93;
 .deets-card {
   padding: 50px !important;
 }
+
+body {
+  background-color: #fffef9 !important;  
+}
+
+.home-container {
+    background-image: url('/assets/home-bg.png') !important;
+    background-size: cover !important;
+}
+
