--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -45,7 +45,7 @@
         <div class="col s6">
           <div class="input-field">
              <%= f.label :current_company, class: "active" %>
-             <%= f.text_field :current_company, :value => @auth['info']['description'] %>
+             <%= f.text_field :current_company, :value => @auth['info']['description'] %>  <!-- TODO: Switch 'description' to company-->
           </div>
         </div>
       </div>
