Working with appointments

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -15,8 +15,11 @@
 			<li>This mentor is currently in good standing: <%=@match.mentor.good_standing %></li>
 		</ul>
 
+		<h3>Schedule an Appointnment</h3>
+
 		<!-- TODO render appt partial  -->
 		<%= render 'appointments' %>
+
 
 		<!-- TODO nice to have: make appt request if none served -->
 </article>
