appointment link fix in mentee show page

--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -3,20 +3,19 @@
 	<section class="col s5">  
       		<%= render 'mentee_profile' %>
     </section>
-
-	<% if @mentee.appointments.any? %>
-		<h3>Upcoming Appointments</h3>
-		<% @mentee.appointments.each do |appointment| %>
-			<ul>
-				<li>
-					<%= link_to "#{appointment.datetime}",mentee_appointment_path(appointment) %>
-				</li>
-			</ul>
-		<% end %>
-	<% else %>
-		<h3>Match with a mentor</h3>
-		<%= link_to "Get Matches", get_matches_mentee_path(@mentee)%>
-	<% end %>
+    <% if @mentee.appointments.any? %>
+		  <h3>Upcoming Appointments</h3>
+			<% @mentee.appointments.each do |appointment| %>
+				<ul>
+					<li>
+						<%= link_to "#{appointment.datetime}",mentee_appointment_path(@mentee, appointment) %>
+					</li>
+				</ul>
+      <% end %>
+	  <% else %>
+		  <h3>Match with a mentor</h3>
+		  <%= link_to "Get Matches", get_matches_mentee_path(@mentee)%>
+	  <% end %>
 </article>
 
 
