--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -6,13 +6,14 @@
 
 	<% if @mentee.appointments.any? %>
 		<h3>Upcoming Appointments</h3>
+		<ul>
 		<% @mentee.appointments.each do |appointment| %>
-			<ul>
+				<li>Appointment with <%= appointment.mentor.first_name + " " + appointment.mentor.last_name %>:</li>
 				<li>
 					<%= link_to "#{appointment.datetime.strftime("%B %e, %Y at %I:%M %p")}",mentee_appointment_path(appointment) %>
 				</li>
-			</ul>
 		<% end %>
+	</ul>
 	<% else %>
 		<h3>Match with a mentor</h3>
 		<%= link_to "Get Matches", get_matches_mentee_path(@mentee)%>
