--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -11,7 +11,7 @@
 			<% @mentor.appointments.each do |appointment| %>
 				<ul>
 					<li>
-						<%= link_to "#{appointment.datetime}", mentor_appointment_path(id: appointment.id, mentor_id: @mentor.id) %> <%# We should be able to clean this up.%>
+						<%= link_to "#{appointment.datetime.strftime("%B %e, %Y at %I:%M %p")}", mentor_appointment_path(id: appointment.id, mentor_id: @mentor.id) %> <%# with #{appointment.mentee.first_name + " " + appointment.mentee.last_name}   We should be able to clean this up.%> 
 
 					</li>
 				</ul>
