--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -14,10 +14,10 @@ for logged in users -->
       <h5 class="welcome">Welcome, <%= current_user.name %></h5>
     </div>
   <% end %>
-  <div class="row valign-wrapper home-wrapper">
+  <div class="row home-col valign-wrapper home-wrapper">
     <div class="col s6 offset-s3 valign">
     	<h2 class="valign center home-header">Common Context</h2>
-      <div class="card transparent z-depth-5 portica hoverable">
+      <div class="card home-card transparent-yellow z-depth-5 portica hoverable">
         <div class="card-content opacity chambray-text">
           <span class="card-title center text-darken-2 welcome"><strong>Empowering aspiring developers to connect with mentors working in the field<strong></span>
         </div>
@@ -29,6 +29,42 @@ for logged in users -->
     </div>
   </div>
 </div>
+
+ <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Tell us about yourself</h5>
+
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Get connected</h5>
+
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Advance your career</h5>
+
+            <p class="light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
 
   <footer class="page-footer chambray">
     <div class="container">
