Fixes bug in mentee show page for appointment generation.

--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -10,7 +10,7 @@
 			<% @mentee.appointments.each do |appointment| %>
 				<ul>
 					<li>
-						<%= link_to "#{appointment.datetime}",mentee_appointment_path(appointment) %>
+						<%= link_to "#{appointment.datetime}",mentee_appointment_path(@mentee, appointment) %>
 					</li>
 				</ul>
 			<% end %>
