Adds icons to homepage

--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -83,4 +83,12 @@ body {
   background-color: rgba(247,233,103,.5) !important;
 }
 
+.welcome {
+  color: rgba(247,233,103,.5) !important;
+}
+
+.material-icons {
+  color: #364E93 !important;
+}
+
 
