--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,4 +1,5 @@
 <article class="xviews xappointments xshow">
+	<% if current_user && ((user_type == "mentee" && get_user.id == @appointment.mentee.id) ||  (user_type == "mentor" && get_user.id == @appointment.mentor.id)) %>
 	<h2>Appointment</h2>
 	<% if @appointment %>
 		<ul>
@@ -12,5 +13,8 @@
 				With <%= @appointment.mentor.first_name + " " + @appointment.mentor.last_name%> and <%= @appointment.mentee.first_name + " " + @appointment.mentee.last_name%>
 			</li>
 		</ul>
+	<% end %>
+	<% else %>
+	<p>You may only view your appointments.</p>
 	<% end %>
 </article>
