--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -74,7 +74,7 @@ body {
 }
 
 .home-container {
-    background-image: url('/assets/street2.png') !important;
+    background-image: url('/image/street2.png') !important;
     background-size: cover !important;
 }
 
