background and font color change

--- a/app/assets/stylesheets/styles/materialize.scss
+++ b/app/assets/stylesheets/styles/materialize.scss
@@ -1,10 +1,11 @@
 
 .chambray{
-  background-color: #364E93 !important;
+  background-color: #4A241B !important;
+  background-image: -webkit-radial-gradient(50% top, circle, rgba(182, 111, 56, 1) 0%, rgba(71, 38, 26, 1) 75%),-webkit-radial-gradient(right top, circle, #794aa2 0%, rgba(254, 180, 96, 1) 57%);
 }
 
 .chambray-text {
-  color: #364E93 !important;
+  color: #351E17 !important;
 }
 
 .half-baked {
