--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -1,3 +1,7 @@
+body {
+    font-family: Lora !important;
+}
+
 h3 {
   color: #7AC8CC;
 }
@@ -95,5 +99,6 @@ body {
 .xshow {
   height: 1000px;
 }
+
 
 
