setting mail notification

--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -100,5 +100,11 @@ body {
   height: 1000px;
 }
 
-
+.widthset {
+  display: inline-block;
+  vertical-align: top;
+  width: 200px;
+  height: 75px;
+  margin: 10px;
+}
 
