--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -70,28 +70,23 @@ for logged in users -->
   <footer class="page-footer chambray">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">About Us</h5>
-          <p class="grey-text text-lighten-4">We are ...</p>
+        <div class="widthset">
+          <h5 class="center white-text">About Us</h5>
+          <p class="center grey-text text-lighten-4">We are budding Software Engineers willing to bring people from different culture to Software developemnt</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+        <div class="widthset">
+          <h5 class="center white-text">Vision</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text">To create opportunity for aspiring developers to connect with people of their ethnic group in tech </a></li>
           </ul>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+        <div class="widthset">
+          <h5 class="center white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="center white-text" href="#!">commoncontextinfo@gmail.com</a></li>
+            <li><a class="center white-text" href="#!">suggestionscc@gmail.com</a></li>
           </ul>
         </div>
       </div>
