--- a/app/assets/stylesheets/styles/styles.scss
+++ b/app/assets/stylesheets/styles/styles.scss
@@ -108,3 +108,13 @@ body {
   margin: 10px;
 }
 
+.btn-primary.active {
+  color: white;
+  background-color: rgba(247, 233, 103, 0.5);
+  border-color: white;
+}
+
+.btn-primary.active:hover
+{
+  background-color: rgba(247, 233, 103, 0.8);
+}
