--- a/app/views/homes/_show.html.erb
+++ b/app/views/homes/_show.html.erb
@@ -1,8 +1,12 @@
-<% if current_user %>
-	<ul>
-		<li><%= link_to "Sign up as Mentor", new_mentor_path %></li>
-		<li><%= link_to "Sign up as Mentee", new_mentee_path %></li>	
-	</ul>
-<% else %>
-<p>Oops! You've already finished registration.</p>
-<% end %>
+<section class="hoverable center">
+	<% if current_user %>
+		<ul class="center-align">
+			<li class="sign-up"><%= link_to "Sign up as Mentor", new_mentor_path, class: "btn" %></li>
+			<li class="sign-up"><%= link_to "Sign up as Mentee", new_mentee_path, class: "btn" %></li>	
+		</ul>
+	<% else %>
+	<p>Oops! You've already finished registration.</p>
+	<% end %>
+</section>
+
+
